# kasugai

./: .gitignore  CHANGELOG.md  LICENSE  _config.yml  copilot-instructions.md  generate_icon.py  index.md  kasugai.md  package-lock.json  re_erath_connect.md  readme.md  run.py
.github/workflows/: build-and-deploy.yml
download/: latest.json
kasugai/: build.py  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
kasugai/e2e/: login.spec.ts
kasugai/src/: cesium.html  context_menu.html  index.html  index1.html  index2.html  index3.html  index4.html  main.ts  styles.css
kasugai/src-tauri/: Cargo.toml  config.json  tauri.conf.json
kasugai/src-tauri/capabilities/: default.json
kasugai/src-tauri/icons/: icon.icns
kasugai/src-tauri/src/: lib.rs  main.rs
kasugai_reearth_plugin/: plugin.js  reearth.yml
