[package]
name = "kasugai"
version = "1.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
enigo = "0.1.2"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
